# dynamics

./: .gitignore  Cargo.toml  README.md  README_JP.md  build-web.sh  run.sh
.github/workflows/: deploy.yml
crates/dyn-cli/: Cargo.toml
crates/dyn-cli/src/: figure.rs  font.rs  main.rs
crates/dyn-core/: Cargo.toml
crates/dyn-core/src/: dynamics.rs  lib.rs  model.rs  parser.rs
crates/dyn-core/tests/: core.rs
crates/dyn-wasm/: Cargo.toml
crates/dyn-wasm/src/: lib.rs
web/: index.html
